# easy_reline

./: .gitignore  LICENSE  README.md  index.html  package.json  readme_ru.md
.github/workflows/: release.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  nsis-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/configurator/: Configurator.css  Configurator.tsx
src/components/fsnode/: FsNode.tsx
src/components/modelnode/: ModelNode.css  ModelNode.tsx
src/components/nodecard/: NodeCard.css  NodeCard.tsx
src/components/pathdropinput/: PathDropInput.css  Pathdropinput.tsx
src/components/resizenode/: ResizeNode.css  Resizenode.tsx  filters.json
src/components/runpanel/: RunPanel.css  RunPanel.tsx
src/components/statusbadge/: StatusBadge.css  Statusbadge.tsx
src/context/: contexts.ts  pipeline.ts
