[package]
name = "easy_reline"
version = "0.1.3"
description = "Easy upscale gui"
authors = ["umzi"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "easy_reline_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }


[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2"
git2 = "0.20.4"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2.6.0"
tokio = { version = "1.49.0", features = ["fs"] }
reqwest = { version = "0.13.2", default-features = false, features = [
    "rustls",
    "stream",
] }
flate2 = "1"
tar = "0.4"
zip = { version = "8.1.0", default-features = false, features = ["deflate"] }
which = "8.0.0"
dirs = "6.0.0"
